mudanças-com-css

--- a/modulo2/html-sistema-loja/template-loja/index.html
+++ b/modulo2/html-sistema-loja/template-loja/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
+        <h1> Bem-vind@ ao <em>nome da loja</em>!</h1>
         <p>Frase de chamada para sua loja</p>
     </header>
 
@@ -26,9 +26,10 @@
     
     <footer>
         <p>Siga-nos nas redes sociais!</p>
-        <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-        <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-        <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <img src="./img/instagram.png" alt="instagram">
+        <img src="./img/facebook.png" alt="facebook">
+        <img src="./img/linkedin.png" alt="linkedin">
+       
     </footer>
 </body>
 </html>
