--- a/modulo2/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo2/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -36,7 +36,7 @@
         </tr>
 
         <tr>
-            <td><img src="./img/calça.webp" alt="calça"/></td>
+            <td><img src="./img/calça.jpg" alt="calça"/></td>
             <td> Calça </td>
             <td> R$ 89,90 </td>
             <td> 80 </td>
